K8s-deployment/catalogue/apiserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogue
  namespace: cat
  annotations:
    nginx.ingress.kubernetes.io/global-rate-limit: "1000"
    nginx.ingress.kubernetes.io/global-rate-limit-key: $server_name
    nginx.ingress.kubernetes.io/global-rate-limit-window: 1s
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    nginx.ingress.kubernetes.io/limit-connections: "150"
    nginx.ingress.kubernetes.io/limit-rps: "150"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header Clear-Site-Data   "*" always;
      add_header Referrer-Policy   "no-referrer-when-downgrade" always;
      add_header X-Frame-Options   "deny" always;
      add_header X-XSS-Protection  "1; mode=block" always;
      add_header X-Permitted-Cross-Domain-Policies  "none" always;
      add_header Cross-Origin-Embedder-Policy "require-corp" always;
      add_header Cross-Origin-Resource-Policy "cross-origin" always;

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cat-api-server
                port:
                  name: http
      host: api.cat.test.io
  tls:
    - hosts:
        - api.cat.test.io
      secretName: catalogue-tls-secret
